[gd_scene load_steps=4 format=3 uid="uid://cvbd176cer4dq"]

[ext_resource type="Script" path="res://ingameMenu.gd" id="1_dbhk5"]
[ext_resource type="FontFile" uid="uid://6voj8etdsa02" path="res://Assets/Font/Silver.ttf" id="1_fhfek"]
[ext_resource type="Texture2D" uid="uid://by1cmim0mnr2" path="res://angivelseafsvarark.png" id="3_uu2pi"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dbhk5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Quit" type="Button" parent="CanvasLayer"]
offset_left = 754.0
offset_top = 748.0
offset_right = 1275.0
offset_bottom = 868.0
theme_override_fonts/font = ExtResource("1_fhfek")
theme_override_font_sizes/font_size = 101
text = "Quit"

[node name="Svarangivelse" type="Button" parent="CanvasLayer"]
offset_left = 754.0
offset_top = 581.0
offset_right = 1275.0
offset_bottom = 701.0
theme_override_fonts/font = ExtResource("1_fhfek")
theme_override_font_sizes/font_size = 101
text = "Svar-angivelse"

[node name="Save" type="Button" parent="CanvasLayer"]
offset_left = 754.0
offset_top = 414.0
offset_right = 1275.0
offset_bottom = 512.0
theme_override_fonts/font = ExtResource("1_fhfek")
theme_override_font_sizes/font_size = 101
text = "Save"

[node name="Continue" type="Button" parent="CanvasLayer"]
offset_left = 754.0
offset_top = 250.0
offset_right = 1275.0
offset_bottom = 348.0
theme_override_fonts/font = ExtResource("1_fhfek")
theme_override_font_sizes/font_size = 101
text = "Continue
"

[node name="svarsprite" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(1034.01, 482.026)
scale = Vector2(1.17138, 1.17138)
texture = ExtResource("3_uu2pi")

[node name="Back" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 796.01
offset_top = 944.026
offset_right = 1291.01
offset_bottom = 1064.03
theme_override_fonts/font = ExtResource("1_fhfek")
theme_override_font_sizes/font_size = 100
text = "Back"

[connection signal="pressed" from="CanvasLayer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/Svarangivelse" to="." method="_on_svarangivelse_pressed"]
[connection signal="pressed" from="CanvasLayer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="CanvasLayer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CanvasLayer/Back" to="." method="_on_back_pressed"]
